# Autonomous_Exploration

./: .gitignore  Dockerfile  Mapping and Exploration.xmind  README.md  RnD_Proposal_1.odt  as_entrypoint.sh  daiem_ros_console.config  docker-compose.yml  environment.yml
dmp/: CMakeLists.txt
hector_navigation/hector_exploration_controller/: CMakeLists.txt
hector_navigation/hector_exploration_controller/launch/: reactive_controller.launch
hector_navigation/hector_exploration_controller/src/: reactive_exploration_controller.cpp
hector_navigation/hector_exploration_node/launch/: exploration_planner.launch
hector_navigation/hector_exploration_planner/: CMakeLists.txt  package.xml
hector_navigation/hector_exploration_planner/cfg/: ExplorationPlanner.cfg
hector_navigation/hector_exploration_planner/include/hector_exploration_planner/: hector_exploration_planner.h
hector_navigation/hector_exploration_planner/src/: hector_exploration_planner.cpp
hector_navigation/hector_path_follower/: CMakeLists.txt
hector_navigation/hector_path_follower/include/hector_path_follower/: hector_path_follower.h
hector_navigation/hector_path_follower/include/hector_wall_follower/: hector_wall_follower.h
hector_navigation/hector_path_follower/src/: hector_path_follower.cpp  hector_wall_follower.cpp
hector_nist_arenas_gazebo/hector_nist_arena_worlds/launch/: exploration_eval_arena.launch
mas_common_robotics/: .gitlab-ci.yml  repository.debs  repository.rosinstall
mas_common_robotics/mcr_environments/mcr_default_env_config/brsu-c025/: map.pgm  map.yaml  navigation_goals.yaml  navigation_orientations.yaml
mas_common_robotics/mcr_manipulation/mcr_manipulation_msgs/: CMakeLists.txt
mas_common_robotics/mcr_manipulation/mcr_manipulation_msgs/msg/: JointSpaceWayPointsList.msg
mas_common_robotics/mcr_manipulation/mcr_moveit_client/: CMakeLists.txt  package.xml  setup.py
mas_common_robotics/mcr_manipulation/mcr_moveit_client/ros/launch/: moveit_client.launch
mas_common_robotics/mcr_manipulation/mcr_moveit_client/ros/scripts/: moveit_client_node
mas_common_robotics/mcr_manipulation/mcr_moveit_client/ros/src/mcr_moveit_client_ros/: moveit_client.py
mas_common_robotics/mcr_perception/mcr_scene_segmentation/: CMakeLists.txt  nodelet_plugins.xml
mas_industrial_robotics/mir_autonomous_exploration/: CMakeLists.txt  package.xml  setup.py
mas_industrial_robotics/mir_autonomous_exploration/config/: config.yml  dqn_config.yml  vob_config.yml
mas_industrial_robotics/mir_autonomous_exploration/dqn_exploration_msgs/msg/: FrontierArea.msg
mas_industrial_robotics/mir_autonomous_exploration/dqn_exploration_msgs/srv/: DQNExplorationService.srv  GetRobotDestination.srv
mas_industrial_robotics/mir_autonomous_exploration/include/dqn/: dqn.py
mas_industrial_robotics/mir_autonomous_exploration/include/rcnfq/: LICENSE  rcnfq.py
mas_industrial_robotics/mir_autonomous_exploration/include/utility/: costmap.py
mas_industrial_robotics/mir_autonomous_exploration/launch/: autonomous_exploration_sim.launch  exploration_evaluator.launch  q_exploration_planner.launch  q_network_server.launch  reactive_controller.launch  virtual_obstacle_builder.launch
mas_industrial_robotics/mir_autonomous_exploration/src/: deep_q_network_server.py  exploration_evaluator.py  q_exploration_planner.cpp  q_network_server.py  reactive_exploration_controller.cpp  virtual_obstacle_builder.cpp
mas_industrial_robotics/mir_robots/mir_bringup/robots/: youbot-brsu-5.launch
mas_industrial_robotics/mir_simulation/mir_bringup_sim/: robot.launch  robot_hector_worlds.launch
realsense_camera/: CMakeLists.txt  package.xml
realsense_camera/config/: RealsenseCamera.cfg  sr300_ir_calibration.yaml  sr300_rgb_calibration.yaml
realsense_camera/launch/: realsense_camera.launch  realsense_sr300_camera.launch
realsense_camera/src/: capturer_mmap.cpp  realsense_camera.cpp  rsutil.h
rnd-proposal/: .gitallow  01Introduction.tex  02ProblemDescription.tex  03ProjectPlan.tex  BibSetting.tex  BibTex.bib  DaiemAli_RnD_Proposal.tex  PaperInformation.tex  Preamble.tex  ThodukaSG-MTProposal.tex  Title.tex  footmisc.sty
youbot-manipulation/youbot_arm_kinematics/: package.xml
youbot-manipulation/youbot_arm_kinematics_moveit/: CMakeLists.txt  package.xml
youbot-manipulation/youbot_arm_kinematics_moveit/ros/test/: youbot_arm_kinematics_moveit_test.cpp
youbot_diagnostics/: .gitignore  README.md
youbot_diagnostics/youbot_battery_monitor/: CMakeLists.txt  README  package.xml  youbot_battery_monitor.sh
youbot_diagnostics/youbot_battery_monitor/include/youbot_battery_monitor/: youbot_battery_monitor.h
youbot_diagnostics/youbot_battery_monitor/src/: youbot_battery_monitor.cpp  youbot_battery_monitor_node.cpp
youbot_diagnostics/youbot_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py
youbot_diagnostics/youbot_dashboard/launch/: dashboard.launch
youbot_diagnostics/youbot_dashboard/scripts/: youbot_dashboard
youbot_diagnostics/youbot_dashboard/src/youbot_dashboard/: youbot_dashboard.py  youbot_ethercat.py  youbot_motors.py
youbot_diagnostics/youbot_diagnostic_aggregator/: CMakeLists.txt  package.xml
youbot_diagnostics/youbot_diagnostics/: CMakeLists.txt  package.xml
youbot_driver/: CMakeLists.txt
youbot_driver/config/: youbot-ethercat.cfg
youbot_driver/src/soem/: CMakeLists.txt
youbot_driver/src/soem/oshw/linux/: nicdrv.c
youbot_driver/src/testing/: CMakeLists.txt
youbot_driver/src/youbot/: EthercatMasterWithThread.cpp
youbot_driver_ros_interface/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
youbot_driver_ros_interface/debian/: README.md  postinst
youbot_driver_ros_interface/include/youbot_driver_ros_interface/: YouBotConfiguration.h  YouBotOODLWrapper.h
youbot_driver_ros_interface/launch/: youbot_driver.launch  youbot_driver_dual_arm.launch
youbot_driver_ros_interface/src/: YouBotConfiguration.cpp  YouBotOODLWrapper.cpp  joint_state_observer_oodl.cpp  youbot_oodl.cpp
youbot_driver_ros_interface/src/examples/: youbot_arm_test.cpp  youbot_keyboard_teleop.py
(+25 files in other folders)
