<package>
  <name>youbot_driver_ros_interface</name>
  <description>ROS wrapper for the youBot driver</description>
  <author>Sebastian Blumenthal</author>
  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <license>LGPL, BSD</license>
  <version>1.1.1</version>
  <url>http://www.youbot-store.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>youbot_driver</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>youbot_driver</run_depend>

</package>



