<?xml version="1.0"?>
<package>
  <name>youbot_battery_monitor</name>
  <version>0.0.1</version>
  <description>This monitor checks the voltage of the battery and the external power supply. If the voltage drops below the minimum voltage, the monitor triggers the system command "beep" to produce a warning sound. The information about the voltage levels and so on are also published on ROS topics if a ROS master is present.</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>
  <author email="jan.paulus@h-brs.de">Jan Paulus</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>

</package>
