<?xml version="1.0"?>
<package>
  <name>youbot_dashboard</name>
  <version>0.1.0</version>
  <description>The youBot dashboard is a modified version of the rqt_pr2_dashboard.
  </description>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>pr2_dashboard_aggregator</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>pr2_power_board</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_robot_dashboard</run_depend>
  <run_depend>rqt_robot_dashboard</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  
  <test_depend>roslaunch</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>


