<?xml version="1.0"?>
<package>
  <name>youbot_diagnostics</name>
  <version>0.0.1</version>
  <description>Diagnostics meta package</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>youbot_dashboard</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
