<?xml version="1.0"?>
<package>
  <name>mcr_moveit_client</name>
  <version>0.1.0</version>
  <description>
  A package that provides event-based wrappers that serve
  as interfaces to move a robot manipulator arm in a specific
  space (e.g. cartesian space, joint space).
  </description>
  <license>GPLv3</license>

  <maintainer email="padmaja.kulkarni@smail.inf.h-brs.de">Padmaja Kulkarni</maintainer>
  <maintainer email="padmaja.kulkarni@smail.inf.h-brs.de">Padmaja Kulkarni</maintainer>
  
  <author email="padmaja.kulkarni@smail.inf.h-brs.de">Padmaja Kulkarni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>moveit_commander</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
</package>
